syntax = "proto3";
package rpc;

message UserPartner{
    string id = 11;         
    string user_id = 1;        
    string partner_id = 3;       
    string alias_user_id = 5;     
    map<string, int64> apps = 6;
    string phone = 7;          
    int64 created = 10;         
    int64 updated_at = 12;       
}

message UserPartnerRequest{
    string user_id = 1;  
    string phone = 7;   
    int64 limit = 2;
}

message UserPartnerResponse{
    repeated UserPartner UserPartners = 1;
}

message ReadRequest{
    string user_id = 1;
}

message ReadResponse{
    UserPartner userPartner = 1;
}

message CreateRequest{
    UserPartner userPartner =  1;
}

message CreateResponse{
    string user_id = 1;
}

message ReadAllRequest{}

message ReadAllResponse{
    repeated UserPartner UserPartners = 1;
}

message DeleteRequest{
    string user_id = 1;
}

message DeleteResponse{
    string user_id = 1;
}

service UserPartnerService {
    // lay ve list UserPartner voi dieu kien
    rpc Request(UserPartnerRequest) returns (UserPartnerResponse){};
    // lay ve 1 UserPartner voi id
    rpc Read(ReadRequest) returns (ReadResponse){};
    // tao 1 UserPartner
    rpc Create(CreateRequest) returns (CreateResponse){};
    // lay ve tat ca UserPartner
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse){};
    // xoa 1 UserPartner voi id
    rpc Delete(DeleteRequest) returns (DeleteResponse){};
}